<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1" >

    <TableRow >

        <TextView
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="3dip"
            android:text="@string/sat" />

        <RadioGroup
            android:id="@+id/radioGroup0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radio02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </TableRow>

    <TableRow >

        <TextView
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="3dip"
            android:text="@string/sun" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radio12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </TableRow>

    <TableRow >

        <TextView
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="3dip"
            android:text="@string/mon" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radio22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </TableRow>

    <TableRow >

        <TextView
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="3dip"
            android:text="@string/tue" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radio32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </TableRow>

    <TableRow >

        <TextView
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="3dip"
            android:text="@string/wed" />

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radio42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </TableRow>

    <TableRow >

        <TextView
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="3dip"
            android:text="@string/tue" />

        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radio52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </TableRow>

    <TableRow >

        <TextView
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="3dip"
            android:text="@string/fri" />

        <RadioGroup
            android:id="@+id/radioGroup6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radio62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </TableRow>

</TableLayout>